--- a/HTML/..estilos/estilo.css
+++ b/HTML/..estilos/estilo.css
@@ -6,7 +6,7 @@
     background-color: #55ff05;
     padding: 5px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-items: start;
 }
 .YT {
@@ -25,7 +25,7 @@
     padding-bottom: 10px;
     padding-right: 10px;
 }
-.cuioso {
+.curioso {
     text-align: center;
     background-color: aqua;
     padding-top: 13px;
