--- a/HTML/..estilos/index.css
+++ b/HTML/..estilos/index.css
@@ -35,8 +35,10 @@
 }
 .cards {
     display: grid;
-    grid-template: 400px 400px 400px / 400px 400px 400px;
+    grid-template: 350px 350px 350px / 350px 350px 350px;
+    margin: 100px;
 }
 .card {
     padding: 50px;
 }
+
