--- a/HTML/..estilos/sobreoCK.css
+++ b/HTML/..estilos/sobreoCK.css
@@ -7,11 +7,13 @@ body {
     margin: 50px;
     padding: 100px;
     border-radius: 45px;
+    display: flex;
+    align-items: center;
 }
 h1, h5 {
     font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
 }
 .img {
-    display: flex;
-    align-items: center;
+    margin: 100px;
 }
